--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,12 +18,12 @@ bevy-inspector-egui = "0.21.0"
 bevy-trait-query = "0.4.0"
 derivative = "2.2.0"
 
-[profile.dev.package."*"]
-opt-level = 3
-debug = false
+# [profile.dev.package."*"]
+# opt-level = 3
+# debug = false
 
-[profile.dev]
-opt-level = 1
+# [profile.dev]
+# opt-level = 1
 
 [profile.release]
 lto = "thin"
